--- a/spring-anno/pom.xml
+++ b/spring-anno/pom.xml
@@ -17,6 +17,13 @@
             <version>5.2.22.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+
 
 
     </dependencies>
