--- a/spring-anno/pom.xml
+++ b/spring-anno/pom.xml
@@ -24,7 +24,17 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.2</version>
+        </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+        </dependency>
 
     </dependencies>
 
