--- a/spring-anno/pom.xml
+++ b/spring-anno/pom.xml
@@ -36,6 +36,12 @@
             <version>8.0.28</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>5.3.12</version>
+        </dependency>
+
     </dependencies>
 
 
